--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
         "noFallthroughCasesInSwitch": true,
         "noEmitOnError": true,
         // React
-        "jsx": "react"
+        "jsx": "react",
+        "esModuleInterop": true
     }
 }
