--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@flywheel-jp/tsconfig",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "license": "MIT",
   "repository": "flywheel-jp/tsconfig",
-  "author": "Yuku Takahashi <yuku@flywheel.jp>",
+  "author": "FLYWHEEL",
   "main": "tsconfig.json",
   "peerDependencies": {
     "typescript": ">=3.7.0"
